[gd_scene load_steps=4 format=3 uid="uid://deots6irjcjud"]

[ext_resource type="Script" uid="uid://ca0dqvuf2eb6e" path="res://ringtone.gd" id="1_df0v4"]
[ext_resource type="Script" uid="uid://g3kn0hjja2ed" path="res://CountableButton.gd" id="2_vha8o"]

[sub_resource type="LabelSettings" id="LabelSettings_vha8o"]
font_size = 32

[node name="Ringtone" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_df0v4")

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]

[node name="Title" type="Label" parent="."]
layout_mode = 0
offset_left = 467.0
offset_top = 13.0
offset_right = 720.0
offset_bottom = 58.0
text = "Ringtone testing"
label_settings = SubResource("LabelSettings_vha8o")

[node name="Notes" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 42.0
offset_top = 243.0
offset_right = 893.0
offset_bottom = 407.0

[node name="0" type="Button" parent="Notes"]
layout_mode = 2
size_flags_horizontal = 3
text = "-"
script = ExtResource("2_vha8o")
metadata/_custom_type_script = "uid://g3kn0hjja2ed"

[node name="1" type="Button" parent="Notes"]
layout_mode = 2
size_flags_horizontal = 3
text = "-"
script = ExtResource("2_vha8o")
metadata/_custom_type_script = "uid://g3kn0hjja2ed"

[node name="2" type="Button" parent="Notes"]
layout_mode = 2
size_flags_horizontal = 3
text = "-"
script = ExtResource("2_vha8o")
metadata/_custom_type_script = "uid://g3kn0hjja2ed"

[node name="3" type="Button" parent="Notes"]
layout_mode = 2
size_flags_horizontal = 3
text = "-"
script = ExtResource("2_vha8o")
metadata/_custom_type_script = "uid://g3kn0hjja2ed"

[node name="4" type="Button" parent="Notes"]
layout_mode = 2
size_flags_horizontal = 3
text = "-"
script = ExtResource("2_vha8o")
metadata/_custom_type_script = "uid://g3kn0hjja2ed"

[node name="5" type="Button" parent="Notes"]
layout_mode = 2
size_flags_horizontal = 3
text = "-"
script = ExtResource("2_vha8o")
metadata/_custom_type_script = "uid://g3kn0hjja2ed"

[node name="6" type="Button" parent="Notes"]
layout_mode = 2
size_flags_horizontal = 3
text = "-"
script = ExtResource("2_vha8o")
metadata/_custom_type_script = "uid://g3kn0hjja2ed"

[node name="7" type="Button" parent="Notes"]
layout_mode = 2
size_flags_horizontal = 3
text = "-"
script = ExtResource("2_vha8o")
metadata/_custom_type_script = "uid://g3kn0hjja2ed"

[node name="8" type="Button" parent="Notes"]
layout_mode = 2
size_flags_horizontal = 3
text = "-"
script = ExtResource("2_vha8o")
metadata/_custom_type_script = "uid://g3kn0hjja2ed"

[node name="9" type="Button" parent="Notes"]
layout_mode = 2
size_flags_horizontal = 3
text = "-"
script = ExtResource("2_vha8o")
metadata/_custom_type_script = "uid://g3kn0hjja2ed"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 49.0
offset_top = 490.0
offset_right = 411.0
offset_bottom = 530.0

[node name="Label" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "Encoded String:"

[node name="LineEdit" type="LineEdit" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
max_length = 10

[node name="Evaluate" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Evaluate"

[node name="Play" type="Button" parent="."]
layout_mode = 2
offset_left = 879.0
offset_top = 523.0
offset_right = 1076.0
offset_bottom = 598.0
text = "Play
"

[connection signal="pressed" from="HBoxContainer/Evaluate" to="." method="_on_evaluate_pressed"]
[connection signal="pressed" from="Play" to="." method="_on_play_pressed"]
